--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@
   src: url("../fonts/raleway/raleway-800.woff2") format("woff2");
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url("../fonts/rubik/rubik-400.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,4 +19,9 @@
   src: url("../fonts/rubik/rubik-700.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
+}
+
+body {
+  font-family: "Rubik", sans-serif;
 }
