--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,4 +26,31 @@ body {
   font-family: "Rubik", sans-serif;
   font-size: 18px;
   line-height: 30px;
+  font-weight: 400;
+  color: #444444;
+  background-color: #fbf7f4;
 }
+
+.page-header {
+  color: #000000;
+  background-color: #FFE17F;
+}
+
+.navigation-link {
+  font-family: "Raleway", sans-serif;
+  line-height: 21px;
+  font-weight: 800;
+  color: inherit;
+  text-align: center;
+  background-color: #FFE17F;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.user-menu {
+  color: inherit;
+  text-align: center;
+  background-color: #FFE17F;
+  text-decoration: none;
+}
+
