Добавляет стилизацию каталогу; Дополняет фоновую стилизацию к главной странице;

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,6 +53,7 @@ body {
   font-weight: 400;
   font-style: normal;
   color: #000000;
+  background-color: #FFE17F;
 }
 
 .catalogue-button {
@@ -61,11 +62,13 @@ body {
   line-height: 21px;
   font-style: normal;
   color: #000000;
+  background-color: #FFE17F;
   text-transform: uppercase;
 }
 
 .navigation-link {
   font-family: "Raleway", sans-serif;
+  font-size: 18px;
   line-height: 21px;
   font-weight: 800;
   color: inherit;
@@ -100,18 +103,24 @@ body {
 
 .product-category-link {
   font-family: "Raleway", sans-serif;
+  font-size: 18px;
   line-height: 24px;
   font-weight: 800;
   color: #000000;
   text-decoration: none;
 }
 
-/*тут могут быть кнопки к доставка и т.д*/
+/*СЕКЦИЯ С ПРЕИМУЩЕСТВАМИ*/
+.advantages {
+  background-color: #F0F0F0;
+}
+
 .advantages-item-button {
   font-family: "Raleway", sans-serif;
   line-height: 21px;
   font-weight: 800;
   color: #000000;
+  background-color: #F0F0F0;
   text-align: center;
   text-transform: uppercase;
 }
@@ -122,6 +131,7 @@ body {
   line-height: 50px;
   font-weight: 800;
   color: #000000;
+  background-color: #F0F0F0;
 }
 
 .delivery-special-offer {
@@ -175,12 +185,17 @@ body {
   color: #444444;
 }
 
+.newsletter {
+  background-color: #F0F0F0;
+}
+
 .newsletter-title {
   font-family: "Raleway", sans-serif;
   font-size: 50px;
   line-height: 50px;
   font-weight: 800;
   color: #000000;
+  background-color: #F0F0F0;
 }
 
 .email-input {
@@ -190,6 +205,7 @@ body {
   font-weight: 400;
   font-style: normal;
   color: #444444;
+  background-color: #F0F0F0;
 }
 
 /*тут кнопка подписаться*/
@@ -198,26 +214,26 @@ body {
   line-height: 21px;
   font-weight: 800;
   color: #000000;
+  background-color: #F0F0F0;
   text-align: center;
   text-transform: uppercase;
 }
 
 .main-footer {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
   color: #FFFFFF;
   background-color: #444444;
 }
 
 .footer-contacts-address {
-  font-size: 16px;
-  line-height: 20px;
   font-style: normal;
   color: #FFFFFF;
   background-color: #444444;
 }
 
 .footer-contacts-phone {
-  font-size: 16px;
-  line-height: 20px;
   font-style: normal;
   color: #FFFFFF;
   background-color: #444444;
@@ -228,9 +244,117 @@ body {
   background-color: #444444;
 }
 
-.media {
-  color: #FFFFFF;
+.media-link {
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 800;
+  color: inherit;
   background-color: #444444;
   text-decoration: none;
+  text-transform: uppercase
+}
+
+.htmlacademy-link {
+  font-family: "Rubik", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  color: inherit;
+  background-color: #444444;
+  text-decoration: none;
+}
+
+/*css каталога*/
+.inner-header-title {
+  font-family: "Raleway", sans-serif;
+  font-size: 50px;
+  line-height: 50px;
+  font-weight: 800;
+  color: #000000;
+}
+
+.breadcrumbs-link {
+  font-size: 16px;
+  line-height: 19px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.catalog-filter-title {
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 800;
+  color: #000000;
   text-transform: uppercase;
+}
+
+.control {
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+}
+
+.sorting-container {
+  color: #000000;
+  background-color: #F0F0F0;
+}
+
+.select-control {
+  font-family: "Rubik", sans-serif;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 400;
+  color: #000000;
+  background-color: #F0F0F0;
+}
+
+.product-card {
+  rgba(240, 240, 240, 0.8);
+}
+
+.product-card-link {
+  text-decoration: none;
+}
+
+.product-card-title {
+  line-height: 20px;
+  font-weight: 700;
+  color: #000000;
+}
+
+.product-card-price {
+  line-height: 21px;
+  text-align: right;
+}
+
+.pagination-show-more {
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.pagination {
+  background-color: #EBEBEB;
+}
+
+.pagination-link {
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #000000;
+  background-color: #EBEBEB;
+  text-decoration: none;
+}
+
+.pagination-prev {
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 800;
+  color: #000000;
+  background-color: #EBEBEB;
+  align-items: center;
+  text-decoration: none;
+  text-transform: uppercase
 }
