--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,15 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   font-family: "Rubik", sans-serif;
   font-size: 18px;
   line-height: 30px;
@@ -36,6 +44,43 @@ body {
   color: #000000;
   background-color: #FFE17F;
 }
+
+/*Содержание хедера обернутого в див*/
+.page-header-container {
+  width: 1040px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.navigation-logo {
+  width: 145px;
+}
+
+.main-navigation {
+  display: flex;
+  flex-direction: column;
+}
+
+.navigation-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.catalogue-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.navigation-list {
+  width: 590px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+/*Заканчиваются флекс-хедер*/
 
 .search-input {
   font-family: "Rubik", sans-serif;
@@ -65,6 +110,9 @@ body {
   background-color: #FFE17F;
   letter-spacing: 0.2em;
   text-transform: uppercase;
+
+  min-width: 293px;
+  margin-right: 276px;
 }
 
 .navigation-link {
@@ -86,6 +134,57 @@ body {
   text-decoration: none;
 }
 
+/*Контейнер-мейн*/
+.main-container {
+  flex-grow: 1;
+}
+
+/*Мейн обернутый в див*/
+.page-container {
+  display: flex;
+  flex-direction: column;
+  width: 1160px;
+  margin: 0 auto;
+}
+
+.best_products {
+  width: 1160px;
+  margin: 0 auto;
+}
+
+.slider-product {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.slider-column {
+  width: 560px;
+  margin-right: 40px;
+}
+
+.slider-wrapper {
+  width: 560px;
+  display: flex;
+  flex-direction: column;
+}
+
+.slider-title, .slider-description {
+  padding: 0;
+  margin: 0;
+}
+
+.features-list {
+  display: flex;
+}
+
+.features-def {
+  margin: 0;
+  padding: 0;
+  order: -1;
+}
+/*заканчиваются флекс-слайдеры*/
+
 .slider-title {
   font-family: "Raleway", sans-serif;
   font-size: 50px;
@@ -103,6 +202,29 @@ body {
   font-size: 16px;
 }
 
+/*Категории товаров магазина*/
+.product-category {
+  width: 1160px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.products-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.products-item {
+  width: 160px;
+}
+/*Заканчиваются флекс-категории*/
+
 .product-category-link {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
@@ -118,10 +240,30 @@ body {
   letter-spacing: -0.02em;
 }
 
-/*СЕКЦИЯ С ПРЕИМУЩЕСТВАМИ*/
+/*Преимущества*/
 .advantages {
   background-color: #F0F0F0;
 }
+
+.advantages-container {
+  width: 1160px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.advantages-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.advantages-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+/*Заканчиваются флекс-преимущества*/
 
 .advantages-item-button {
   font-family: "Raleway", sans-serif;
@@ -134,7 +276,7 @@ body {
   text-transform: uppercase;
 }
 
-.advantages-item {
+.advantages-subtitle {
   font-family: "Raleway", sans-serif;
   font-size: 50px;
   line-height: 50px;
@@ -142,6 +284,16 @@ body {
   color: #000000;
   background-color: #F0F0F0;
 }
+
+/*Спец-предложение по доставке*/
+.scarce-commodity {
+  background-color: #F0F0F0;
+  width: 1160px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+/*Заканчивается флекс*/
 
 .delivery-special-offer {
   font-family: "Raleway", sans-serif;
@@ -153,6 +305,39 @@ body {
   text-decoration: none;
   text-align: center;
 }
+
+/*Секция о нас*/
+.index-columns {
+  width: 1160px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.companies-item::marker {
+  color: #FFC700;
+}
+
+.companies-list {
+  padding-left: 0;
+  margin: 0;
+}
+
+.contacts-schedule {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+}
+
+.companies {
+  width: 520px;
+}
+
+.contacts {
+  width: 532px;
+}
+/*Заканчиваются флекс-о-нас*/
 
 .companies-title {
   font-family: "Raleway", sans-serif;
@@ -201,9 +386,35 @@ body {
   color: #444444;
 }
 
+/*Рассылка*/
 .newsletter {
   background-color: #F0F0F0;
+  width: 1160px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
+
+.newsletter-wrapper {
+  width: 348px;
+}
+
+.newsletter-description-wrapper {
+  width: 553px;
+}
+
+.newsletter-tick-wrapper {
+  width: 1160px;
+  display: flex;
+  align-items: center;
+}
+
+.newsletter-tick {
+  order: 1;
+}
+/*Заканчиваются флекс-рассылки*/
 
 .newsletter-title {
   font-family: "Raleway", sans-serif;
@@ -224,7 +435,7 @@ body {
   background-color: #F0F0F0;
 }
 
-/*тут кнопка подписаться*/
+/*Кнопка-подписаться на рассылку*/
 .email-button {
   font-family: "Raleway", sans-serif;
   line-height: 21px;
@@ -235,6 +446,58 @@ body {
   text-align: center;
   text-transform: uppercase;
 }
+
+/*Футер*/
+.page-footer-container {
+  display: flex;
+  width: 1160px;
+  margin: 0 auto;
+  align-items: center;
+}
+
+.footer-address-wrapper {
+  width: 250px;
+  margin-right: 110px;
+}
+
+.footer-menu-wrapper {
+  min-width: 500px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-social-item:not(:last-child) {
+  margin-right: 15px;
+}
+
+.footer-contacts-wrapper {
+  width: 180px;
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  align-items: end;
+
+}
+
+.menu-footer {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-social-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+/*Заканчиваются футер-флексы*/
 
 .main-footer {
   font-size: 16px;
@@ -297,6 +560,20 @@ body {
   color: inherit;
   text-decoration: none;
 }
+
+/*Список товаров с фильтрами*/
+.catalog-products {
+  display: flex;
+}
+
+.catalog-filter {
+  width: 320px;
+}
+
+.catalog-right-column {
+  width: 840px;
+}
+/*Заканчивются флексы-товары*/
 
 .product-filter {
   font-family: "Raleway", sans-serif;
