:heavy_check_mark: Сборка #5

--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -243,15 +243,16 @@ body {
 
 .advantages-wrapper {
   display: flex;
+  align-items: center;
 }
 
 .advantages-button-wrapper {
   width: 280px;
-  margin-right: 120px;
 }
 
 .advantages-item {
   max-width: 600px;
+  margin-left: 116px;
 }
 
 .advantages-list {
@@ -270,6 +271,9 @@ body {
   letter-spacing: 0.2em;
   text-align: center;
   text-transform: uppercase;
+
+  padding-right: 120px;
+  width: 280px;
 }
 
 .advantages-subtitle {
