--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,6 +41,17 @@ body {
   background-color: #fbf7f4;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .page-header {
   color: #000000;
   background-color: #FFE17F;
@@ -58,11 +69,49 @@ body {
 }
 
 .navigation-logo {
+  display: block;
   width: 145px;
+  margin-bottom: 30px;
 }
 
 .navigation-wrapper {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+}
+
+.search-form {
+  display: flex;
+  width: 517px;
+}
+
+.search-input {
+  flex-grow: 1;
+  min-width: 50px;
+}
+
+.search-button {
+  flex-shrink: 0;
+  display: inline-block;
+  padding: 10px 56px;
+  min-width: 50px;
+}
+
+.user-menu {
+  display: block;
+  padding-left: 27px;
+}
+
+.user-cart {
+  padding-left: 44px;
+}
+
+.user-login {
+  max-width: 240px;
+  margin-left: 26px;
+  margin-right: auto;
 }
 
 .catalogue-wrapper {
@@ -132,6 +181,8 @@ body {
   letter-spacing: 0.2em;
   text-decoration: none;
   text-transform: uppercase;
+
+  margin-right: -0.2em;
 }
 
 .user-menu {
@@ -147,8 +198,7 @@ body {
 }
 
 .best_products {
-  width: 1160px;
-  margin: 0 auto;
+  margin-bottom: 70px;
 }
 
 .slider-product {
@@ -178,9 +228,24 @@ body {
   line-height: 50px;
   font-weight: 800;
   color: #000000;
+  margin: 0;
 }
 
-.slider-title, .slider-description {
+.spec-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.spec-wrap:not(:last-child) {
+  margin-right: 20px;
+}
+
+.features-def {
+  margin-bottom: 12px;
+}
+
+.slider-description {
   padding: 0;
   margin: 0;
 }
@@ -203,6 +268,9 @@ body {
 }
 
 /*Категории товаров*/
+.product-category {
+  margin-bottom: 70px;
+}
 .products-list {
   padding: 0;
   margin: 0;
@@ -231,6 +299,7 @@ body {
   font-size: 18px;
   font-weight: 800;
   letter-spacing: -0.02em;
+  margin: 0;
 }
 
 /*Преимущества*/
@@ -241,6 +310,7 @@ body {
 .advantages-wrapper {
   display: flex;
   align-items: center;
+  margin-bottom: 70px;
 }
 
 .advantages-button-wrapper {
@@ -278,13 +348,16 @@ body {
   margin-bottom: 34px;
 }
 
+.advantages-description {
+  margin: 0;
+}
+
 /*Спец-предложение по доставке*/
 .scarce-commodity {
   background-color: #F0F0F0;
-  width: 1160px;
-  margin: 0 auto;
   display: flex;
   justify-content: center;
+  margin-bottom: 70px;
 }
 /*Заканчивается флекс*/
 
@@ -297,12 +370,16 @@ body {
   letter-spacing: 0.2em;
   text-decoration: none;
   text-align: center;
+
+  display: inline-block;
+  padding: 40px 125px;
 }
 
 /*Секция о нас*/
 .index-columns {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 70px;
 }
 
 .companies-item::marker {
@@ -310,8 +387,8 @@ body {
 }
 
 .companies-list {
-  padding-left: 0;
-  margin-bottom: 30px;
+  padding: 0;
+  margin: 0;
 }
 
 .contacts-schedule {
@@ -328,9 +405,18 @@ body {
 .contacts {
   width: 532px;
 }
+
+.companies-button {
+  width: 270px;
+}
+
+.contacts-button {
+  width: 260px;
+}
 /*Заканчиваются флекс-о-нас*/
 
 .companies-title {
+  margin-top: 48px;
   margin-bottom: 48px;
 }
 
@@ -351,6 +437,9 @@ body {
   font-weight: 700;
   color: #000000;
   letter-spacing: -0.02em;
+
+  padding-left: 26px;
+  margin-bottom: 30px;
 }
 
 .companies-item:not(:last-child) {
@@ -365,15 +454,12 @@ body {
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
+
+  display: inline-block;
+  padding: 10px 5px;
 }
 
-.contacts-title {
-  font-family: "Raleway", sans-serif;
-  font-size: 50px;
-  line-height: 50px;
-  font-weight: 800;
-  color: #000000;
-}
+
 
 .contacts-subtitle {
   font-size: 24px;
@@ -408,27 +494,48 @@ body {
 }
 
 .newsletter-description {
-  max-width: 700px;
+  width: 553px;
+  margin-top: 74px;
+  margin-bottom: 144px;
 }
 
 .newsletter-tick-wrapper {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
 }
 
 .newsletter-tick {
   order: 1;
+  margin: 0;
+  padding-left: 32px;
 }
+
+.newsletter-subscriber {
+  display: flex;
+  width: 810px;
+  height: 57px;
+}
+
+.email-input {
+  flex-grow: 1;
+  min-width: 50px;
+}
+
+.email-button {
+  flex-shrink: 0;
+  display: inline-block;
+  padding: 18px 40px;
+  min-width: 50px;
+}
+
 /*Заканчиваются флекс-рассылки*/
 
 .newsletter-title {
-  font-family: "Raleway", sans-serif;
-  font-size: 50px;
-  line-height: 50px;
-  font-weight: 800;
-  color: #000000;
   background-color: #F0F0F0;
+  margin-top: 64px;
+  margin-bottom: 144px;
 }
 
 .email-input {
@@ -444,6 +551,7 @@ body {
 /*Кнопка-подписаться на рассылку*/
 .email-button {
   font-family: "Raleway", sans-serif;
+  font-size: 18px;
   line-height: 21px;
   font-weight: 800;
   color: #000000;
@@ -456,9 +564,18 @@ body {
 /*Футер*/
 .page-footer-container {
   display: flex;
-  width: 1160px;
-  margin: 0 auto;
-  align-items: center;
+  /*align-items: center;*/
+  padding-top: 62px;
+  padding-bottom: 62px;
+}
+
+.logo-yellow {
+  display: block;
+  margin-bottom: 35px;
+}
+
+.footer-contacts-address {
+  margin-bottom: 64px;
 }
 
 .footer-address-wrapper {
@@ -466,34 +583,48 @@ body {
   margin-right: 120px;
 }
 
+/*Навигация по футеру*/
 .footer-menu-wrapper {
-  width: 445px;
-}
-
-.footer-social-list {
+  width: 450px;
+  margin-top: 76px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.footer-social-item:not(:last-child) {
-  margin-right: 15px;
-}
-
-.menu-footer {
+.menu-footer-list {
   list-style: none;
+  display: flex;
   padding: 0;
   margin: 0;
-  display: flex;
+}
+
+.menu-footer-item {
+  margin-bottom: 62px;
 }
 
 .menu-footer-item:not(:last-child) {
   margin-right: 35px;
 }
 
+/*Социальные сети в футере*/
 .footer-social-list {
   list-style: none;
-  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
   margin: 0;
+  padding: 0;
+}
+
+.footer-social-item {
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+
+.footer-social-item:nth-child(3n) {
+  margin-right: 0;
 }
 
 .footer-contacts-wrapper {
@@ -502,7 +633,7 @@ body {
   flex-direction: column;
   margin-left: auto;
   align-items: end;
-
+  margin-top: 78px;
 }
 /*Заканчиваются футер-флексы*/
 
@@ -524,6 +655,9 @@ body {
   font-style: normal;
   color: #FFFFFF;
   background-color: #444444;
+
+  display: block;
+  margin-bottom: 63px;
 }
 
 .menu-footer-link {
@@ -539,7 +673,7 @@ body {
   color: inherit;
   background-color: #444444;
   text-decoration: none;
-  text-transform: uppercase
+  text-transform: uppercase;
 }
 
 .htmlacademy-link {
@@ -559,6 +693,27 @@ body {
   line-height: 50px;
   font-weight: 800;
   color: #000000;
+
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+
+.main-container {
+  padding-top: 35px;
+}
+
+.breadcrumbs {
+  display: flex;
+  flex-wrap: wrap;
+
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.breadcrumbs-item:not(:last-child) {
+  padding-right: 36px;
+  margin-bottom: 35px;
 }
 
 .breadcrumbs-link {
@@ -579,6 +734,12 @@ body {
 
 .catalog-right-column {
   width: 840px;
+}
+
+.product-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 /*Заканчивются флексы-товары*/
 
@@ -609,6 +770,15 @@ body {
 .sorting-container {
   color: #000000;
   background-color: #F0F0F0;
+
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 40px;
+}
+
+.button-light {
+  width: 30px;
+  height: 30px;
 }
 
 .select-control {
@@ -638,13 +808,47 @@ body {
 }
 
 .pagination-show-more {
+  padding: 18px 295px;
+  margin-bottom: 45px;
+  font-weight: 800;
   font-size: 16px;
   line-height: 19px;
-  color: #000000;
+  text-align: center;
+  width: 100%;
 }
 
 .pagination {
+  display: flex;
+  align-items: center;
+  list-style: none;
   background-color: #EBEBEB;
+
+  margin-top: 0;
+  margin-bottom: 76px;
+  padding: 0;
+}
+
+.pagination-current {
+  display: block;
+  width: 40px;
+  padding: 10px 16px;
+
+}
+
+.pagination-item {
+  padding: 10px 15px;
+}
+
+.pagination-item-button {
+  padding: 25px;
+}
+
+.back-button {
+  margin-right: auto;
+}
+
+.go-button {
+  margin-left: auto;
 }
 
 .pagination-link {
@@ -666,5 +870,5 @@ body {
   background-color: #EBEBEB;
   align-items: center;
   text-decoration: none;
-  text-transform: uppercase
+  text-transform: uppercase;
 }
