--- a/styles/styles.css
+++ b/styles/styles.css
@@ -698,8 +698,9 @@ body {
   margin-bottom: 16px;
 }
 
-.main-container {
+.main-container-catalog {
   padding-top: 35px;
+
 }
 
 .breadcrumbs {
@@ -725,6 +726,10 @@ body {
 
 /*Список товаров с фильтрами*/
 .catalog-products {
+  background-color: #F0F0F0;
+}
+
+.catalog-products-wrapper {
   display: flex;
 }
 
@@ -734,13 +739,20 @@ body {
 
 .catalog-right-column {
   width: 840px;
+  background-color: #FFFFFF;
+  padding: 0 40px;
 }
 
 .product-list {
+  display: grid;
+  grid-template-columns: repeat(2, 360px);
+  gap: 44px 40px;
   list-style: none;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 44px;
   padding: 0;
 }
+
 /*Заканчивются флексы-товары*/
 
 .product-filter {
@@ -773,7 +785,9 @@ body {
 
   display: flex;
   justify-content: space-between;
-  padding: 25px 40px;
+  margin: 0;
+  padding: 0;
+  /*padding: 25px 40px;*/
 }
 
 .button-light {
