--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2134,7 +2134,7 @@ body {
   content: "";
   top: 170px;
   left: 109px;
-  z-index: 1;
+  z-index: -1;
 }
 
 .product-card-link:hover::before {
@@ -2145,6 +2145,10 @@ body {
   bottom: 0;
   left: 0;
   background-color: rgba(255, 255, 255, 0.6);
+  z-index: 1;
+}
+
+.product-card-link:hover .product-card-button {
   z-index: 1;
 }
 
