--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -646,6 +646,7 @@ body {
   padding: 15px 66px 15px 0;
 
   cursor: pointer;
+  z-index: 2;
 }
 
 .navigation-link {
@@ -2133,7 +2134,7 @@ body {
   content: "";
   top: 170px;
   left: 109px;
-  z-index: 1;
+  z-index: -1;
 }
 
 .product-card-link:hover::before {
@@ -2144,6 +2145,10 @@ body {
   bottom: 0;
   left: 0;
   background-color: rgba(255, 255, 255, 0.6);
+  z-index: 1;
+}
+
+.product-card-link:hover .product-card-button {
   z-index: 1;
 }
 
