--- a/styles/styles.css
+++ b/styles/styles.css
@@ -782,6 +782,7 @@ body {
   border: 2px solid #000000;
   background-color: #ffffff;
   cursor: pointer;
+  outline: none;
 }
 
 .slider-pagination-button-current {
@@ -948,6 +949,10 @@ body {
   opacity: 0.3;
 }
 
+.product-category-link:focus {
+  outline: 2px solid #af4fff;
+}
+
 .product-icon {
   width: 160px;
   height: 160px;
@@ -994,7 +999,7 @@ body {
 /*Преимущества*/
 .advantages {
   background-color: #F0F0F0;
-  height: 292px;
+  min-height: 292px;
   margin-bottom: 70px;
 }
 
@@ -1056,6 +1061,10 @@ body {
   text-align: left;
   border: none;
   cursor: pointer;
+}
+
+.advantages-item-button:focus {
+  outline: none;
 }
 
 .advantages-item-button:focus {
@@ -1931,6 +1940,26 @@ body {
   border-radius: 50%;
 }
 
+.control-input:focus + .control-mark::after {
+  content: "";
+  position: absolute;
+  top: -3px;
+  right: -3px;
+  bottom: -3px;
+  left: -3px;
+  outline: 2px solid #af4fff;
+}
+
+.radio-input:focus + .radio-mark::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  right: -3px;
+  bottom: -3px;
+  left: -3px;
+  outline: 2px solid #af4fff;
+}
+
 .filter-button {
   border: none;
   width: 100%;
@@ -2133,8 +2162,9 @@ body {
   position: absolute;
   content: "";
   top: 170px;
-  left: 109px;
+  left: 80px;
   z-index: -1;
+  width: 220px;
 }
 
 .product-card-link:hover::before {
@@ -2185,6 +2215,7 @@ body {
   text-align: right;
   color: #444444;
   margin: 0;
+  flex-shrink: 0;
 }
 
 .pagination-show-more {
@@ -2315,7 +2346,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(240, 240, 240, 0.9);
-  z-index: 1;
+  z-index: 2;
 }
 
 .modal {
@@ -2564,16 +2595,16 @@ body {
   z-index: 1;
 }
 
-.modal-input.invalid {
-  outline: 2px solid #ff3d3d;
-  outline-offset: -2px;
+.modal-input:focus:invalid {
+  border: 2px solid #FF3D3D;
+  outline-offset: 1px;
 }
 
 .modal-input:disabled {
   opacity: 0.1;
 }
 
-.modal-input.invalid + .modal-help {
+.modal-input:focus.invalid + .modal-help {
   color: #ff3d3d;
 }
 
