Добавляет изменения по правкам;

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,7 +39,7 @@ body {
   font-weight: 400;
   font-style: normal;
   color: #444444;
-  background-color: #fbf7f4;
+  background-color: #FFFFFF;
 }
 
 .visually-hidden {
@@ -83,7 +83,6 @@ body {
   display: block;
   cursor: pointer;
   width: 145px;
-  /*margin-bottom: 30px;*/
   margin-top: -20px;
 }
 
@@ -758,7 +757,6 @@ body {
   opacity: 0.1;
 }
 
-
 .slider-pagination {
   position: absolute;
   display: flex;
@@ -907,7 +905,7 @@ body {
 
 /*Категории товаров*/
 .product-category {
-  margin-bottom: 180px;
+  margin-bottom: 70px;
 }
 
 .products-list {
@@ -916,6 +914,7 @@ body {
   list-style: none;
 
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
 }
@@ -998,16 +997,16 @@ body {
 
 /*Преимущества*/
 .advantages {
-  background-color: #F0F0F0;
-  min-height: 292px;
   margin-bottom: 70px;
+  background: linear-gradient(to bottom, #ffffff 102px, #f0f0f0 120px);
+  padding-bottom: 72px;
 }
 
 .advantages-wrapper {
   display: flex;
   align-items: center;
   position: relative;
-  top: -102px;
+  top: 7px;
 }
 
 .advantages-button-wrapper {
@@ -1492,6 +1491,7 @@ body {
 .menu-footer-list {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
 }
@@ -1926,6 +1926,10 @@ body {
 
 .radio-mark {
   border-radius: 50%;
+  border: 2px solid #cccccc;
+}
+
+.radio-input[type="radio"]:checked + .radio-mark {
   border-color: #000000;
 }
 
@@ -2088,7 +2092,6 @@ body {
 
 .button-light-wrap {
   display: flex;
-
 }
 
 .sort-button {
